// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Author Container should render ById 1`] = `
<DocumentFragment>
  <article
    class="css-15it3wn-AuthorWrapper e18ssx8j1"
  >
    <header>
      <h1
        class="MuiTypography-root MuiTypography-h3 css-1108gw4-MuiTypography-root"
      >
        Foobar
      </h1>
      <aside
        class="MuiTypography-root MuiTypography-h5 css-1i4zcgj-MuiTypography-root"
      >
        Editor
      </aside>
    </header>
    <img
      alt="DSC07717"
      class="css-1f8yvym-ImageWrapper-Author e1shv2yg0"
      loading="lazy"
      srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
      title=""
    />
    <aside
      class="css-xraw1t-AuthorLinksWrapper e18ssx8j0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1xylxj1-MuiTypography-root-MuiLink-root"
        href="https://twitter.com"
        target="__blank"
      >
        Twitter
      </a>
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1xylxj1-MuiTypography-root-MuiLink-root"
        href="https://facebook.com"
        target="__blank"
      >
        Facebook
      </a>
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1xylxj1-MuiTypography-root-MuiLink-root"
        href="https://instagram.com"
        target="__blank"
      >
        Instagram
      </a>
    </aside>
    <div
      class="css-1v4yto8-RichTextBlockWrapper eu4zjs90"
    >
      <div
        data-gramm="false"
        data-slate-editor="true"
        data-slate-node="value"
        style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
      >
        <h2
          class="MuiTypography-root MuiTypography-h4 css-1vaqyff-MuiTypography-root"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Title
            </span>
          </span>
        </h2>
        <h3
          class="MuiTypography-root MuiTypography-h5 css-1i4zcgj-MuiTypography-root"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Title 2
            </span>
          </span>
        </h3>
        <h4
          class="MuiTypography-root MuiTypography-h6 css-fv3wrn-MuiTypography-root"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Title 3
            </span>
          </span>
        </h4>
        <ul
          data-slate-node="element"
        >
          <li
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Unordered List
              </span>
            </span>
          </li>
        </ul>
        <ol
          data-slate-node="element"
        >
          <li
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Ordered List
              </span>
            </span>
          </li>
        </ol>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-ij8wsu-MuiTypography-root"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-length="0"
              data-slate-zero-width="n"
            >
              ﻿
              <br />
            </span>
          </span>
        </p>
        <table
          class="css-o38l6f-tableStyles"
        >
          <tbody
            data-slate-node="element"
          >
            <tr
              data-slate-node="element"
            >
              <td
                class="css-1suggax-tableCellStyles"
                data-slate-node="element"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-ij8wsu-MuiTypography-root"
                  data-slate-node="element"
                >
                  <span
                    data-slate-node="text"
                  >
                    <span
                      data-slate-string="true"
                    >
                      Table Cell 1
                    </span>
                  </span>
                </p>
              </td>
              <td
                class="css-1suggax-tableCellStyles"
                data-slate-node="element"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-ij8wsu-MuiTypography-root"
                  data-slate-node="element"
                >
                  <span
                    data-slate-node="text"
                  >
                    <span
                      data-slate-string="true"
                    >
                      Table Cell 2
                    </span>
                  </span>
                </p>
              </td>
            </tr>
            <tr
              data-slate-node="element"
            >
              <td
                class="css-1suggax-tableCellStyles"
                data-slate-node="element"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-ij8wsu-MuiTypography-root"
                  data-slate-node="element"
                >
                  <span
                    data-slate-node="text"
                  >
                    <span
                      data-slate-string="true"
                    >
                      Table Cell 3
                    </span>
                  </span>
                </p>
              </td>
              <td
                class="css-1suggax-tableCellStyles"
                data-slate-node="element"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-ij8wsu-MuiTypography-root"
                  data-slate-node="element"
                >
                  <span
                    data-slate-node="text"
                  >
                    <span
                      data-slate-string="true"
                    >
                      Table Cell 4
                    </span>
                  </span>
                </p>
              </td>
            </tr>
          </tbody>
        </table>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-ij8wsu-MuiTypography-root"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Normal text,
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <strong
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                 Bold
              </span>
            </strong>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <em
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Italic
              </span>
            </em>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <u
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Underline
              </span>
            </u>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <del
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Strikethrough
              </span>
            </del>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <sup
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Sup
              </span>
            </sup>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <sub
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Sub
              </span>
            </sub>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1xylxj1-MuiTypography-root-MuiLink-root"
            data-slate-node="element"
            href="https://google.com"
            rel="noreferrer"
            target="_blank"
            title="Link"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Link
              </span>
            </span>
          </a>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 😀
            </span>
          </span>
        </p>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Author Container should render BySlug 1`] = `
<DocumentFragment>
  <article
    class="css-15it3wn-AuthorWrapper e18ssx8j1"
  >
    <header>
      <h1
        class="MuiTypography-root MuiTypography-h3 css-1108gw4-MuiTypography-root"
      >
        Foobar
      </h1>
      <aside
        class="MuiTypography-root MuiTypography-h5 css-1i4zcgj-MuiTypography-root"
      >
        Editor
      </aside>
    </header>
    <img
      alt="DSC07717"
      class="css-1f8yvym-ImageWrapper-Author e1shv2yg0"
      loading="lazy"
      srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
      title=""
    />
    <aside
      class="css-xraw1t-AuthorLinksWrapper e18ssx8j0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1xylxj1-MuiTypography-root-MuiLink-root"
        href="https://twitter.com"
        target="__blank"
      >
        Twitter
      </a>
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1xylxj1-MuiTypography-root-MuiLink-root"
        href="https://facebook.com"
        target="__blank"
      >
        Facebook
      </a>
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1xylxj1-MuiTypography-root-MuiLink-root"
        href="https://instagram.com"
        target="__blank"
      >
        Instagram
      </a>
    </aside>
    <div
      class="css-1v4yto8-RichTextBlockWrapper eu4zjs90"
    >
      <div
        data-gramm="false"
        data-slate-editor="true"
        data-slate-node="value"
        style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
      >
        <h2
          class="MuiTypography-root MuiTypography-h4 css-1vaqyff-MuiTypography-root"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Title
            </span>
          </span>
        </h2>
        <h3
          class="MuiTypography-root MuiTypography-h5 css-1i4zcgj-MuiTypography-root"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Title 2
            </span>
          </span>
        </h3>
        <h4
          class="MuiTypography-root MuiTypography-h6 css-fv3wrn-MuiTypography-root"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Title 3
            </span>
          </span>
        </h4>
        <ul
          data-slate-node="element"
        >
          <li
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Unordered List
              </span>
            </span>
          </li>
        </ul>
        <ol
          data-slate-node="element"
        >
          <li
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Ordered List
              </span>
            </span>
          </li>
        </ol>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-ij8wsu-MuiTypography-root"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-length="0"
              data-slate-zero-width="n"
            >
              ﻿
              <br />
            </span>
          </span>
        </p>
        <table
          class="css-o38l6f-tableStyles"
        >
          <tbody
            data-slate-node="element"
          >
            <tr
              data-slate-node="element"
            >
              <td
                class="css-1suggax-tableCellStyles"
                data-slate-node="element"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-ij8wsu-MuiTypography-root"
                  data-slate-node="element"
                >
                  <span
                    data-slate-node="text"
                  >
                    <span
                      data-slate-string="true"
                    >
                      Table Cell 1
                    </span>
                  </span>
                </p>
              </td>
              <td
                class="css-1suggax-tableCellStyles"
                data-slate-node="element"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-ij8wsu-MuiTypography-root"
                  data-slate-node="element"
                >
                  <span
                    data-slate-node="text"
                  >
                    <span
                      data-slate-string="true"
                    >
                      Table Cell 2
                    </span>
                  </span>
                </p>
              </td>
            </tr>
            <tr
              data-slate-node="element"
            >
              <td
                class="css-1suggax-tableCellStyles"
                data-slate-node="element"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-ij8wsu-MuiTypography-root"
                  data-slate-node="element"
                >
                  <span
                    data-slate-node="text"
                  >
                    <span
                      data-slate-string="true"
                    >
                      Table Cell 3
                    </span>
                  </span>
                </p>
              </td>
              <td
                class="css-1suggax-tableCellStyles"
                data-slate-node="element"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-ij8wsu-MuiTypography-root"
                  data-slate-node="element"
                >
                  <span
                    data-slate-node="text"
                  >
                    <span
                      data-slate-string="true"
                    >
                      Table Cell 4
                    </span>
                  </span>
                </p>
              </td>
            </tr>
          </tbody>
        </table>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-ij8wsu-MuiTypography-root"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Normal text,
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <strong
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                 Bold
              </span>
            </strong>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <em
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Italic
              </span>
            </em>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <u
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Underline
              </span>
            </u>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <del
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Strikethrough
              </span>
            </del>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <sup
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Sup
              </span>
            </sup>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <sub
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Sub
              </span>
            </sub>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1xylxj1-MuiTypography-root-MuiLink-root"
            data-slate-node="element"
            href="https://google.com"
            rel="noreferrer"
            target="_blank"
            title="Link"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Link
              </span>
            </span>
          </a>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 😀
            </span>
          </span>
        </p>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Author Container should render WithClassName 1`] = `
<DocumentFragment>
  <article
    class="extra-classname css-15it3wn-AuthorWrapper e18ssx8j1"
  >
    <header>
      <h1
        class="MuiTypography-root MuiTypography-h3 css-1108gw4-MuiTypography-root"
      >
        Foobar
      </h1>
      <aside
        class="MuiTypography-root MuiTypography-h5 css-1i4zcgj-MuiTypography-root"
      >
        Editor
      </aside>
    </header>
    <img
      alt="DSC07717"
      class="css-1f8yvym-ImageWrapper-Author e1shv2yg0"
      loading="lazy"
      srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
      title=""
    />
    <aside
      class="css-xraw1t-AuthorLinksWrapper e18ssx8j0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1xylxj1-MuiTypography-root-MuiLink-root"
        href="https://twitter.com"
        target="__blank"
      >
        Twitter
      </a>
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1xylxj1-MuiTypography-root-MuiLink-root"
        href="https://facebook.com"
        target="__blank"
      >
        Facebook
      </a>
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1xylxj1-MuiTypography-root-MuiLink-root"
        href="https://instagram.com"
        target="__blank"
      >
        Instagram
      </a>
    </aside>
    <div
      class="css-1v4yto8-RichTextBlockWrapper eu4zjs90"
    >
      <div
        data-gramm="false"
        data-slate-editor="true"
        data-slate-node="value"
        style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
      >
        <h2
          class="MuiTypography-root MuiTypography-h4 css-1vaqyff-MuiTypography-root"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Title
            </span>
          </span>
        </h2>
        <h3
          class="MuiTypography-root MuiTypography-h5 css-1i4zcgj-MuiTypography-root"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Title 2
            </span>
          </span>
        </h3>
        <h4
          class="MuiTypography-root MuiTypography-h6 css-fv3wrn-MuiTypography-root"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Title 3
            </span>
          </span>
        </h4>
        <ul
          data-slate-node="element"
        >
          <li
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Unordered List
              </span>
            </span>
          </li>
        </ul>
        <ol
          data-slate-node="element"
        >
          <li
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Ordered List
              </span>
            </span>
          </li>
        </ol>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-ij8wsu-MuiTypography-root"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-length="0"
              data-slate-zero-width="n"
            >
              ﻿
              <br />
            </span>
          </span>
        </p>
        <table
          class="css-o38l6f-tableStyles"
        >
          <tbody
            data-slate-node="element"
          >
            <tr
              data-slate-node="element"
            >
              <td
                class="css-1suggax-tableCellStyles"
                data-slate-node="element"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-ij8wsu-MuiTypography-root"
                  data-slate-node="element"
                >
                  <span
                    data-slate-node="text"
                  >
                    <span
                      data-slate-string="true"
                    >
                      Table Cell 1
                    </span>
                  </span>
                </p>
              </td>
              <td
                class="css-1suggax-tableCellStyles"
                data-slate-node="element"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-ij8wsu-MuiTypography-root"
                  data-slate-node="element"
                >
                  <span
                    data-slate-node="text"
                  >
                    <span
                      data-slate-string="true"
                    >
                      Table Cell 2
                    </span>
                  </span>
                </p>
              </td>
            </tr>
            <tr
              data-slate-node="element"
            >
              <td
                class="css-1suggax-tableCellStyles"
                data-slate-node="element"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-ij8wsu-MuiTypography-root"
                  data-slate-node="element"
                >
                  <span
                    data-slate-node="text"
                  >
                    <span
                      data-slate-string="true"
                    >
                      Table Cell 3
                    </span>
                  </span>
                </p>
              </td>
              <td
                class="css-1suggax-tableCellStyles"
                data-slate-node="element"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-ij8wsu-MuiTypography-root"
                  data-slate-node="element"
                >
                  <span
                    data-slate-node="text"
                  >
                    <span
                      data-slate-string="true"
                    >
                      Table Cell 4
                    </span>
                  </span>
                </p>
              </td>
            </tr>
          </tbody>
        </table>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-ij8wsu-MuiTypography-root"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Normal text,
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <strong
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                 Bold
              </span>
            </strong>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <em
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Italic
              </span>
            </em>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <u
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Underline
              </span>
            </u>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <del
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Strikethrough
              </span>
            </del>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <sup
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Sup
              </span>
            </sup>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <sub
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Sub
              </span>
            </sub>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1xylxj1-MuiTypography-root-MuiLink-root"
            data-slate-node="element"
            href="https://google.com"
            rel="noreferrer"
            target="_blank"
            title="Link"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Link
              </span>
            </span>
          </a>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 😀
            </span>
          </span>
        </p>
      </div>
    </div>
  </article>
</DocumentFragment>
`;

exports[`Author Container should render WithEmotion 1`] = `
<DocumentFragment>
  <article
    class="css-15it3wn-AuthorWrapper e18ssx8j1"
  >
    <header>
      <h1
        class="MuiTypography-root MuiTypography-h3 css-1108gw4-MuiTypography-root"
      >
        Foobar
      </h1>
      <aside
        class="MuiTypography-root MuiTypography-h5 css-1i4zcgj-MuiTypography-root"
      >
        Editor
      </aside>
    </header>
    <img
      alt="DSC07717"
      class="css-1f8yvym-ImageWrapper-Author e1shv2yg0"
      loading="lazy"
      srcset="https://unsplash.it/800/400 800w,
https://unsplash.it/500/300 500w,
https://unsplash.it/300/200 300w,
https://unsplash.it/200/100 200w"
      title=""
    />
    <aside
      class="css-xraw1t-AuthorLinksWrapper e18ssx8j0"
    >
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1xylxj1-MuiTypography-root-MuiLink-root"
        href="https://twitter.com"
        target="__blank"
      >
        Twitter
      </a>
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1xylxj1-MuiTypography-root-MuiLink-root"
        href="https://facebook.com"
        target="__blank"
      >
        Facebook
      </a>
      <a
        class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1xylxj1-MuiTypography-root-MuiLink-root"
        href="https://instagram.com"
        target="__blank"
      >
        Instagram
      </a>
    </aside>
    <div
      class="css-1v4yto8-RichTextBlockWrapper eu4zjs90"
    >
      <div
        data-gramm="false"
        data-slate-editor="true"
        data-slate-node="value"
        style="outline: none; white-space: pre-wrap; word-wrap: break-word;"
      >
        <h2
          class="MuiTypography-root MuiTypography-h4 css-1vaqyff-MuiTypography-root"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Title
            </span>
          </span>
        </h2>
        <h3
          class="MuiTypography-root MuiTypography-h5 css-1i4zcgj-MuiTypography-root"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Title 2
            </span>
          </span>
        </h3>
        <h4
          class="MuiTypography-root MuiTypography-h6 css-fv3wrn-MuiTypography-root"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Title 3
            </span>
          </span>
        </h4>
        <ul
          data-slate-node="element"
        >
          <li
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Unordered List
              </span>
            </span>
          </li>
        </ul>
        <ol
          data-slate-node="element"
        >
          <li
            data-slate-node="element"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Ordered List
              </span>
            </span>
          </li>
        </ol>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-ij8wsu-MuiTypography-root"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-length="0"
              data-slate-zero-width="n"
            >
              ﻿
              <br />
            </span>
          </span>
        </p>
        <table
          class="css-o38l6f-tableStyles"
        >
          <tbody
            data-slate-node="element"
          >
            <tr
              data-slate-node="element"
            >
              <td
                class="css-1suggax-tableCellStyles"
                data-slate-node="element"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-ij8wsu-MuiTypography-root"
                  data-slate-node="element"
                >
                  <span
                    data-slate-node="text"
                  >
                    <span
                      data-slate-string="true"
                    >
                      Table Cell 1
                    </span>
                  </span>
                </p>
              </td>
              <td
                class="css-1suggax-tableCellStyles"
                data-slate-node="element"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-ij8wsu-MuiTypography-root"
                  data-slate-node="element"
                >
                  <span
                    data-slate-node="text"
                  >
                    <span
                      data-slate-string="true"
                    >
                      Table Cell 2
                    </span>
                  </span>
                </p>
              </td>
            </tr>
            <tr
              data-slate-node="element"
            >
              <td
                class="css-1suggax-tableCellStyles"
                data-slate-node="element"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-ij8wsu-MuiTypography-root"
                  data-slate-node="element"
                >
                  <span
                    data-slate-node="text"
                  >
                    <span
                      data-slate-string="true"
                    >
                      Table Cell 3
                    </span>
                  </span>
                </p>
              </td>
              <td
                class="css-1suggax-tableCellStyles"
                data-slate-node="element"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-ij8wsu-MuiTypography-root"
                  data-slate-node="element"
                >
                  <span
                    data-slate-node="text"
                  >
                    <span
                      data-slate-string="true"
                    >
                      Table Cell 4
                    </span>
                  </span>
                </p>
              </td>
            </tr>
          </tbody>
        </table>
        <p
          class="MuiTypography-root MuiTypography-body1 MuiTypography-gutterBottom css-ij8wsu-MuiTypography-root"
          data-slate-node="element"
        >
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              Normal text,
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <strong
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                 Bold
              </span>
            </strong>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <em
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Italic
              </span>
            </em>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <u
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Underline
              </span>
            </u>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <del
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Strikethrough
              </span>
            </del>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <sup
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Sup
              </span>
            </sup>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <span
            data-slate-node="text"
          >
            <sub
              data-slate-leaf="true"
            >
              <span
                data-slate-string="true"
              >
                Sub
              </span>
            </sub>
          </span>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 
            </span>
          </span>
          <a
            class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1xylxj1-MuiTypography-root-MuiLink-root"
            data-slate-node="element"
            href="https://google.com"
            rel="noreferrer"
            target="_blank"
            title="Link"
          >
            <span
              data-slate-node="text"
            >
              <span
                data-slate-string="true"
              >
                Link
              </span>
            </span>
          </a>
          <span
            data-slate-node="text"
          >
            <span
              data-slate-string="true"
            >
              , 😀
            </span>
          </span>
        </p>
      </div>
    </div>
  </article>
</DocumentFragment>
`;
